k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-war-service
spec:
  type: NodePort
  selector:
    app: java-war-app
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30007
